users list and remove update create
