# admin/src/shared/api/users.ts
@@ -1,6 +1,6 @@
 import { createAsyncThunk } from "@reduxjs/toolkit";
 import { IErrorWithFields } from "app/interfaces";
-import { IUser } from "entities/users";
+import { IUser, IUserEditForm } from "entities/users";
 import { request } from "./base";
 
 export const authorization = createAsyncThunk<
@@ -10,15 +10,44 @@ export const authorization = createAsyncThunk<
 >(
   "user/authorization",
   async ({ login, password }, { rejectWithValue }) =>
-    await request(rejectWithValue, "/user/authorization", "POST", { login, password })
+    await request(rejectWithValue, "/user/authorization", "POST", {
+      login,
+      password,
+    })
 );
 
 export const whoAmI = createAsyncThunk(
   "user/whoami",
-  async (_r, { rejectWithValue }) => await request(rejectWithValue, "/user/whoami", "GET")
+  async (_r, { rejectWithValue }) =>
+    await request(rejectWithValue, "/user/whoami", "GET")
 );
 
 export const getUsersForCompany = createAsyncThunk(
   "user/getUsersForCompany",
-  async (_r, { rejectWithValue }) => await request(rejectWithValue, "/user/get-users-for-company", "GET")
+  async (_r, { rejectWithValue }) =>
+    await request(rejectWithValue, "/user/get-users-for-company", "GET")
+);
+
+export const updateUserData = createAsyncThunk(
+  "user/updateUserData",
+  async (data: IUserEditForm, { rejectWithValue }) =>
+    await request(rejectWithValue, "/user/update-user-data", "POST", data)
+);
+
+export const createNewUser = createAsyncThunk(
+  "user/createNewUser",
+  async (data: IUserEditForm, { rejectWithValue }) =>
+    await request(rejectWithValue, "/user/create-new-user", "POST", {
+      ...data,
+      password: data.newPassword,
+      newPassword: undefined,
+    })
+);
+
+export const removeUser = createAsyncThunk(
+  "user/removeUser",
+  async (userId: number, { rejectWithValue }) =>
+    await request(rejectWithValue, "/user/remove-user", "POST", {
+      userId,
+    })
 );
