# server/src/interfaces/common.ts
@@ -1,0 +1,4 @@
+export interface IResponseStatusWithMessage {
+  isSuccess: boolean;
+  message?: string;
+}
