# server/src/services/companies-services.ts
@@ -12,21 +12,29 @@ const changePassword = async ({
 }): Promise<{ isSuccess: boolean; message?: string }> => {
   const client = await pool.connect();
 
-  //TODO: надо сделать тут привязку к пользователю по userId
-  const companyId = 3;
+  const { rows: usersById } = await client.query(
+    "SELECT company_id FROM users WHERE id = $1",
+    [userId]
+  );
+
+  if (!usersById.length) {
+    return { isSuccess: false, message: "User not found" };
+  }
+
+  const companyId = usersById[0].company_id;
 
   const { rows } = await client.query("SELECT * FROM companies WHERE id = $1", [
     companyId,
   ]);
 
   if (!rows.length) {
-    return { isSuccess: false, message: "company_not_found" };
+    return { isSuccess: false, message: "Company not found" };
   }
 
   const match_old_password = await bcrypt.compare(oldPassword, rows[0].hash);
 
   if (!match_old_password) {
-    return { isSuccess: false, message: "old_password_incorrect" };
+    return { isSuccess: false, message: "Old password is incorrect" };
   }
 
   const newHash = await bcrypt.hash(newPassword, 13);
@@ -37,7 +45,7 @@ const changePassword = async ({
   );
 
   if (updatedRows[0].hash !== newHash) {
-    return { isSuccess: false, message: "unexpected_error" };
+    return { isSuccess: false, message: "Unexpected error has occurred" };
   }
 
   client.release();
